# neural-network

./: .gitignore  II SENIC - Semana Nacional de Iniciação Científica da SBM.typ  README.md  digit-recognizer.ipynb  digit-recognizer.py  pyproject.toml  setup.py
src/neural_network/: __init__.py  activation_functions.py  activations.py  cost_functions.py  costs.py  derivates.py  layers.py  network.py  neural_network.py
