[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = "A neural network from scratch without high-level libraries"
authors = ["Felipe Adeildo <felipeadeildo@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
